implemented docke-compose

--- a/test_databases.ipynb
+++ b/test_databases.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On average request takes:  0.15078813552856446\n"
+     ]
+    }
+   ],
    "source": [
     "requests_num = 300\n",
     "\n",
