--- a/test_databases.ipynb
+++ b/test_databases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,31 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1701553203.558945"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "time.time()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def average_duration(request: str, data_gen=str, method:str='GET', iterations: int=30000) -> float:\n",
+    "def average_duration(request: str, data_gen=str, method:str='GET', iterations: int=30000):\n",
     "    '''\n",
     "        Returns duration of the requests in s.\n",
     "    '''\n",
@@ -54,10 +34,6 @@
     "        rec_function = requests.get\n",
     "    elif method == 'POST':\n",
     "        rec_function = requests.post\n",
-    "    elif method == 'DELETE':\n",
-    "        rec_function = requests.delete\n",
-    "    elif method == 'UPDATE':\n",
-    "        rec_function = requests.patch\n",
     "    else:\n",
     "        raise ValueError('Method has not been recognized!')\n",
     "    \n",
@@ -69,7 +45,56 @@
     "\n",
     "        durations.append(end - start)\n",
     "\n",
-    "    print('On average request takes: ', np.mean(durations))"
+    "    print('On average request takes: ', np.mean(durations))\n",
+    "\n",
+    "\n",
+    "def average_duration_alteration(request: str, extraction_request: str, method:str='PATCH', iterations: int=30000):\n",
+    "    '''\n",
+    "        Funtion for testing UPDATE, DELETE\n",
+    "    '''\n",
+    "\n",
+    "    if method == 'PATCH':\n",
+    "        action = requests.patch\n",
+    "    elif method == 'DELETE':\n",
+    "        action = requests.delete\n",
+    "    else:\n",
+    "        raise ValueError('This method is not recognized!')\n",
+    "\n",
+    "    extracted_data = requests.get(url=extraction_request)\n",
+    "    entries = json.loads(extracted_data.content)\n",
+    "\n",
+    "    ids = [entry['telegram_id'] for entry in entries]\n",
+    "    durations = []\n",
+    "\n",
+    "    for _ in range(iterations):\n",
+    "        for id in ids:\n",
+    "            start = time.time()\n",
+    "            action(\n",
+    "                url=request + str(id)\n",
+    "            )\n",
+    "            end = time.time()\n",
+    "\n",
+    "            durations.append(end - start)\n",
+    "\n",
+    "    print('On average request takes: ', np.mean(durations))\n",
+    "\n",
+    "\n",
+    "def generate_user(num: int):\n",
+    "    start = 9281497\n",
+    "\n",
+    "    for i in range(num):\n",
+    "        data = json.dumps({\n",
+    "            'telegram_id' : start + i,\n",
+    "            'username': 'varenik',\n",
+    "            'about': '''On Unix, return the current processor time as a floating point number expressed in seconds. The precision, and in fact the very definition of the meaning of “processor time”, depends on that of the C function of the same name. On Windows, this function returns wall-clock seconds elapsed since the first call to this function, as a floating point number, based on the Win32 function QueryPerformanceCounter(). The resolution is typically better than one microsecond.'''\n",
+    "        })\n",
+    "\n",
+    "        yield data\n",
+    "\n",
+    "\n",
+    "def generate_empty(num: int):\n",
+    "    for _ in range(num):\n",
+    "        yield json.dumps({})"
    ]
   },
   {
@@ -77,6 +102,100 @@
    "metadata": {},
    "source": [
     "# Tests of NoSQL: MongoDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Insert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request = 'http://localhost:5052/users/insert'\n",
+    "iteration_num = 30000\n",
+    "\n",
+    "average_duration(request=request, data_gen=generate_user(iteration_num), method='POST', iterations=iteration_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On average request takes:  0.0019246681531270345\n"
+     ]
+    }
+   ],
+   "source": [
+    "request = 'http://localhost:5052/users'\n",
+    "iteration_num = 300\n",
+    "\n",
+    "average_duration(request=request, data_gen=generate_empty(iteration_num), method='POST', iterations=iteration_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On average request takes:  0.0027388036251068115\n"
+     ]
+    }
+   ],
+   "source": [
+    "request = 'http://localhost:5052/users/patch/'\n",
+    "extraction = 'http://localhost:5052/users'\n",
+    "iteration_num = 10\n",
+    "\n",
+    "average_duration_alteration(request=request, extraction_request=extraction, method='PATCH', iterations=iteration_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Delete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request = 'http://localhost:5052/users/delete/'\n",
+    "extraction = 'http://localhost:5052/users'\n",
+    "iteration_num = 10\n",
+    "\n",
+    "average_duration_alteration(request=request, extraction_request=extraction, method='DELETE', iterations=iteration_num)"
    ]
   },
   {
@@ -95,27 +214,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "request = 'http://localhost:5051/users/insert'\n",
-    "\n",
-    "def generate_user(num: int):\n",
-    "    start = 9281497\n",
-    "\n",
-    "    for i in range(num):\n",
-    "        data = json.dumps({\n",
-    "            'telegram_id' : start + i,\n",
-    "            'username': 'varenik',\n",
-    "            'about': '''On Unix, return the current processor time as a floating point number expressed in seconds. The precision, and in fact the very definition of the meaning of “processor time”, depends on that of the C function of the same name. On Windows, this function returns wall-clock seconds elapsed since the first call to this function, as a floating point number, based on the Win32 function QueryPerformanceCounter(). The resolution is typically better than one microsecond.'''\n",
-    "        })\n",
-    "\n",
-    "        yield data"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -128,6 +226,7 @@
     }
    ],
    "source": [
+    "request = 'http://localhost:5051/users/insert'\n",
     "requests_num = 30000\n",
     "\n",
     "average_duration(request=request, data_gen=iter(generate_user(requests_num)), method='POST', iterations=requests_num)"
@@ -138,19 +237,6 @@
    "metadata": {},
    "source": [
     "## Extract"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "request = 'http://localhost:5051/users'\n",
-    "\n",
-    "def generate_empty(num: int):\n",
-    "    for _ in range(num):\n",
-    "        yield json.dumps({})"
    ]
   },
   {
@@ -167,6 +253,7 @@
     }
    ],
    "source": [
+    "request = 'http://localhost:5051/users'\n",
     "requests_num = 300\n",
     "\n",
     "average_duration(request=request, data_gen=iter(generate_empty(requests_num)), method='GET', iterations=requests_num)"
@@ -180,10 +267,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Delete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results"
    ]
   },
   {
